--- a/report_data_semantics/main.tex
+++ b/report_data_semantics/main.tex
@@ -252,12 +252,10 @@ title=\lstname % show the filename of files included with \lstinputlisting; also
 %     \centering\includegraphics[scale=0.5]{immagini/cherubino_pant541.png}
 % \end{figure}
 
-\begin{center} %SISTEMARE MARGINI 
-     %{\LARGE{ Data Science and Business Informatics Master Course \\}}
-     %\vspace{2cm}
+\begin{center}  
      {\LARGE { Data Mining: Fundamentals}}\\
      \vspace{2cm}
-    {\Large { A.Y\:2024/2025 }}\\
+    {\Large { A.Y. 2024/2025 }}\\
     \vspace{2cm}
     {\Large { Group 12 }}\\
      \vspace{2cm}
