added performance report tables

--- a/code/binary_decision_trees.ipynb
+++ b/code/binary_decision_trees.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "fde25e1f",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "9b5ca692",
    "metadata": {},
    "outputs": [
@@ -38,11 +38,16 @@
        "       'countryOfOrigin_NA', 'countryOfOrigin_AF', 'countryOfOrigin_AS',\n",
        "       'countryOfOrigin_EU', 'countryOfOrigin_OC', 'countryOfOrigin_SA',\n",
        "       'countryOfOrigin_UNK', 'fill_runtimeMinutes_Bruno', 'totalNominations',\n",
-       "       'totalMedia', 'runtimeMinutes_notitletype'],\n",
+       "       'totalMedia', 'runtimeMinutes_notitletype', 'outlier',\n",
+       "       'startYear_imputed', 'runtimeMinutes_imputed', 'numVotes_imputed',\n",
+       "       'totalCredits_imputed', 'criticReviewsTotal_imputed',\n",
+       "       'numRegions_imputed', 'userReviewsTotal_imputed',\n",
+       "       'fill_runtimeMinutes_Bruno_imputed', 'totalNominations_imputed',\n",
+       "       'totalMedia_imputed', 'runtimeMinutes_notitletype_imputed'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "c7947bea",
    "metadata": {},
    "outputs": [],
@@ -71,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "9ab5c8de",
    "metadata": {},
    "outputs": [
@@ -94,14 +99,19 @@
        "       'countryOfOrigin_AS', 'countryOfOrigin_EU', 'countryOfOrigin_OC',\n",
        "       'countryOfOrigin_SA', 'countryOfOrigin_UNK',\n",
        "       'fill_runtimeMinutes_Bruno', 'totalNominations', 'totalMedia',\n",
-       "       'runtimeMinutes_notitletype', 'titleType_movie', 'titleType_short',\n",
-       "       'titleType_tvEpisode', 'titleType_tvMiniSeries', 'titleType_tvMovie',\n",
-       "       'titleType_tvSeries', 'titleType_tvShort', 'titleType_tvSpecial',\n",
-       "       'titleType_video'],\n",
+       "       'runtimeMinutes_notitletype', 'outlier', 'startYear_imputed',\n",
+       "       'runtimeMinutes_imputed', 'numVotes_imputed', 'totalCredits_imputed',\n",
+       "       'criticReviewsTotal_imputed', 'numRegions_imputed',\n",
+       "       'userReviewsTotal_imputed', 'fill_runtimeMinutes_Bruno_imputed',\n",
+       "       'totalNominations_imputed', 'totalMedia_imputed',\n",
+       "       'runtimeMinutes_notitletype_imputed', 'titleType_movie',\n",
+       "       'titleType_short', 'titleType_tvEpisode', 'titleType_tvMiniSeries',\n",
+       "       'titleType_tvMovie', 'titleType_tvSeries', 'titleType_tvShort',\n",
+       "       'titleType_tvSpecial', 'titleType_video'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "7486f4d6",
    "metadata": {},
    "outputs": [],
@@ -131,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "0d5ca0cf",
    "metadata": {},
    "outputs": [
@@ -163,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "id": "ea5e6c36",
    "metadata": {},
    "outputs": [
@@ -192,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "5b123d28",
    "metadata": {},
    "outputs": [
@@ -220,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "id": "a23695ce",
    "metadata": {},
    "outputs": [],
@@ -266,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "id": "a85c3581",
    "metadata": {},
    "outputs": [
@@ -376,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "id": "5ef17882",
    "metadata": {},
    "outputs": [
@@ -388,7 +398,7 @@
        "       0.        , 0.        , 0.02617021, 0.00253938, 0.00215465])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "id": "894dffb1",
    "metadata": {},
    "outputs": [
@@ -448,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "id": "14242aa1",
    "metadata": {},
    "outputs": [
@@ -482,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "id": "cbd8cd81",
    "metadata": {},
    "outputs": [
@@ -507,8 +517,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "2cb79c96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "startYear 1909.0 2023.0\n",
+      "runtimeMinutes nan nan\n",
+      "numVotes 5.0 17077.269999999844\n",
+      "totalCredits 0.0 439.0\n",
+      "criticReviewsTotal 0.0 55.289999999999054\n",
+      "numRegions 1.0 31.289999999999054\n",
+      "userReviewsTotal 0.0 124.57999999999811\n",
+      "fill_runtimeMinutes_Bruno 3.0 170.0\n",
+      "totalNominations 0.0 17.0\n",
+      "totalMedia 0.0 152.0\n",
+      "runtimeMinutes_notitletype 3.0 166.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from support.outliers import detect_outliers\n",
+    "\n",
+    "train, test = detect_outliers(train, test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "6f537fe2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feats = [\n",
+    "    'numRegions',\n",
+    "    'totalMedia',\n",
+    "    'totalCredits', \n",
+    "    'totalNominations',\n",
+    "    # 'rating',\n",
+    "    'startYear',\n",
+    "    # 'canHaveEpisodes',\n",
+    "    'fill_runtimeMinutes_Bruno_imputed',\n",
+    "    # 'is_Documentary', 'is_History', 'is_Adventure', 'is_Thriller',\n",
+    "    # 'is_Game-Show', 'is_Comedy', 'is_Sci-Fi', 'is_Romance', 'is_Biography',\n",
+    "    # 'is_Musical', 'is_Western', 'is_Music', 'is_Film-Noir', 'is_Adult',\n",
+    "    # 'is_Reality-TV', 'is_News', 'is_Action', 'is_Crime', 'is_Short',\n",
+    "    # 'is_Fantasy', 'is_Family', 'is_Mystery', 'is_Talk-Show', 'is_Drama',\n",
+    "    # 'is_Sport', 'is_War', 'is_Horror', 'is_Animation',\n",
+    "    'countryOfOrigin_freq_enc',\n",
+    "    # 'countryOfOrigin_NA',\n",
+    "    # 'countryOfOrigin_AF',\n",
+    "    'countryOfOrigin_AS',\n",
+    "    'countryOfOrigin_EU',\n",
+    "    # 'countryOfOrigin_OC',\n",
+    "    # 'countryOfOrigin_SA',\n",
+    "    # 'countryOfOrigin_UNK',\n",
+    "    # 'is_from_Oceania', 'is_from_North America',\n",
+    "    # 'is_from_South America', 'is_from_Asia', 'is_from_Africa',\n",
+    "    # 'is_from_Europe',\n",
+    "    'criticReviewsTotal',\n",
+    "    # 'userReviewsTotal',\n",
+    "    'titleType_movie', 'titleType_short',\n",
+    "    'titleType_tvEpisode',\n",
+    "    # 'titleType_tvMiniSeries',\n",
+    "    # 'titleType_tvMovie',\n",
+    "    'titleType_tvSeries',\n",
+    "    # 'titleType_tvShort',\n",
+    "    # 'titleType_tvSpecial',\n",
+    "    'titleType_video'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "05169276",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/numpy/ma/core.py:2820: RuntimeWarning: invalid value encountered in cast\n",
+      "  _data = np.array(data, dtype=dtype, copy=copy,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DecisionTreeClassifier(ccp_alpha=0.0007039911357542228, criterion='log_loss',\n",
+      "                       max_depth=26, min_samples_leaf=3, random_state=42)\n",
+      "Classification Report for Train Data:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.80      0.69      0.74      5067\n",
+      "           1       0.87      0.92      0.89     11105\n",
+      "\n",
+      "    accuracy                           0.85     16172\n",
+      "   macro avg       0.83      0.80      0.82     16172\n",
+      "weighted avg       0.85      0.85      0.85     16172\n",
+      "\n",
+      "\n",
+      "Classification Report for Test Data:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.77      0.67      0.72      1698\n",
+      "           1       0.86      0.91      0.88      3686\n",
+      "\n",
+      "    accuracy                           0.83      5384\n",
+      "   macro avg       0.81      0.79      0.80      5384\n",
+      "weighted avg       0.83      0.83      0.83      5384\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import classification_report\n",
+    "from scipy.stats import randint, uniform\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Prepare the data\n",
+    "# X_train = train.loc[~train['outlier'], feats].copy()\n",
+    "# X_test = test.loc[~test['outlier'], feats].copy()\n",
+    "X_train = train[feats].copy()\n",
+    "X_test = test[feats].copy()\n",
+    "\n",
+    "# Scale the features\n",
+    "scaler = StandardScaler()\n",
+    "X_train = pd.DataFrame(scaler.fit_transform(X_train), columns=X_train.columns)\n",
+    "X_test = pd.DataFrame(scaler.transform(X_test), columns=X_test.columns)\n",
+    "\n",
+    "# y_train = train.loc[~train['outlier'], 'has_lowEngagement'].copy()\n",
+    "# y_test = test.loc[~train['outlier'], 'has_lowEngagement'].copy()\n",
+    "y_train = train['has_lowEngagement'].copy()\n",
+    "y_test = test['has_lowEngagement'].copy()\n",
+    "\n",
+    "param_grid = {\n",
+    "    'criterion': ['gini', 'entropy', 'log_loss'],\n",
+    "    'max_depth': randint(10, 60),\n",
+    "    'min_samples_split': randint(2, 30),\n",
+    "    'min_samples_leaf': randint(1, 30),\n",
+    "    'max_features': ['sqrt', 'log2', None],\n",
+    "    'ccp_alpha': uniform(0.0, 0.05),  # cost-complexity pruning\n",
+    "    'splitter': ['best', 'random']\n",
+    "}\n",
+    "\n",
+    "# Initialize the Isolation Forest model\n",
+    "base_clf = DecisionTreeClassifier(random_state=42)\n",
+    "\n",
+    "# Perform Randomized Search\n",
+    "random_search = RandomizedSearchCV(\n",
+    "    estimator=base_clf,\n",
+    "    param_distributions=param_grid,\n",
+    "    n_iter=200,\n",
+    "    scoring='f1_macro',\n",
+    "    cv=5,\n",
+    "    random_state=42,\n",
+    "    n_jobs=-1\n",
+    ")\n",
+    "\n",
+    "# Fit Randomized Search to the training data\n",
+    "random_search.fit(X_train, y_train)\n",
+    "\n",
+    "# Use the best estimator from random search\n",
+    "clf = random_search.best_estimator_\n",
+    "\n",
+    "print(clf)\n",
+    "\n",
+    "# Predict anomalies (-1 for anomaly, 1 for normal)\n",
+    "train_pred = clf.predict(X_train)\n",
+    "test_pred = clf.predict(X_test)\n",
+    "\n",
+    "# Generate classification report\n",
+    "# report_train = classification_report(train.loc[~train['outlier'], 'has_lowEngagement'], train_pred)\n",
+    "# report_test = classification_report(test.loc[~test['outlier'],'has_lowEngagement'], test_pred)\n",
+    "report_train = classification_report(train['has_lowEngagement'], train_pred)\n",
+    "report_test = classification_report(test['has_lowEngagement'], test_pred)\n",
+    "\n",
+    "print(\"Classification Report for Train Data:\")\n",
+    "print(report_train)\n",
+    "print(\"\\nClassification Report for Test Data:\")\n",
+    "print(report_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ed222c5",
    "metadata": {},
    "outputs": [],
    "source": []
