--- a/code/outliers.ipynb
+++ b/code/outliers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "738db51d",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "52820825",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "e73f6233",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "d77274da",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,8 +142,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "8b7b546e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train.to_csv('pp_train.csv', index=False)\n",
+    "test.to_csv('pp_test.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee3da052",
    "metadata": {},
    "outputs": [],
    "source": []
